# camino

./: .dockerignore  .env-example  .eslintignore  .gitignore  .gitlab-ci.yml  .prettierignore  Dockerfile.api  Dockerfile.api.docs  Dockerfile.ci  Dockerfile.docs  Dockerfile.openfisca  Dockerfile.ui  Dockerfile.ui.storybook  Makefile  README.md  contributing.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  keycloak-config.json  knip.ts  package-lock.json  package.json  script_merge_etapes_types.sh  storybook_nginx.conf  ui_nginx.conf  ui_nginx_headers.conf
.github/ISSUE_TEMPLATE/: bug_report.md  feature.md
.github/workflows/: api-ci.yml  api-release-docker.yml  api.yml  cd.yml  ci.yml  codeql-analysis.yml  common.yml  deploy.yml  doc-ci.yml  doc.yml  gitguardian.yml  graphql.yml  openfisca.yml  release-github.yml  trilili.yml  ui-ci.yml  ui-release-docker.yml  ui.yml
.gitlab/: build-ci-image.sh  deploy.yml  global.yml
.gitlab/ci/: api.yml  common.yml  doc.yml  global-jobs.yml  ui.yml
docs-sources/: mkdocs.yml
docs-sources/assets/: architecture.puml  generate  keycloak_impersonate.uml
docs-sources/assets/database/: camino-db.uml  generate
docs-sources/docs/01-utilisation/: 01-graphql.md  01-introduction.md  02-flux.md  04-flux.md
docs-sources/docs/02-developpement/: 01-introduction.md  02-base-de-donnees.md
docs-sources/docs/03-architecture/: 02-docker.md  (+4 more)
infra/: Makefile  README.md  deploy.yml  inventory_dev  inventory_preprod  inventory_prod
infra/cd/: .gitignore  Cargo.toml
infra/cd/.cargo/: config
infra/cd/src/: main.rs
(+61 files in other folders)
