[package]
name = "cd"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.35.1", features=["macros", "rt-multi-thread"]}
warp = "0.3.6"

[profile.release]
strip = "debuginfo"

